syntax = "proto3";

message Void {
}

message StringMsg {
    string val = 1;

    repeated string list = 2;
}

message SrcDest {
    string src = 1;
    string dest = 2;
}

////////////////////////////////////////////////////////////////////////
//
// Profiles and their controls
//

// This is how we get polymorphic behavior for ProfileControls
message ProfileControl {
    oneof sub {
        GroupProfileControl group = 1;
        EnumProfileControl enm = 2;
        IntensityProfileControl intensity = 3;
        PanTiltProfileControl panTilt = 4;
        LedVarProfileControl ledVar = 5;
    }
}

message GroupProfileControl {
    string id = 1;
    string name = 2;

    repeated ProfileControl controls = 3;
}

message EnumProfileControlOption {
    string name = 1;
    repeated int32 values = 2;
    string varName = 3;
    int32 varOffset = 4;
}

message EnumProfileControl {
    string id = 1;
    string name = 2;

    int32 channelIx = 3;
    repeated EnumProfileControlOption options = 4;
}

message IntensityProfileControl {
    string id = 1;
    string name = 2;

    int32 channelIx = 3;
}

message PanTiltProfileControlAxis {
    int32 coarse = 1;
    int32 fine = 2;
    double minRad = 3;
    double maxRad = 4;
}

message PanTiltProfileControl {
    string id = 1;
    string name = 2;

    PanTiltProfileControlAxis pan = 3;
    PanTiltProfileControlAxis tilt = 4;

    int32 chSpeed = 5;
}

message LedVarProfileControl {
    string id = 1;
    string name = 2;

    map<string, int32> colorMap = 3;
}

message Profile {
    string id = 1;
    string name = 2;
    int32 channelCount = 3;

    // Even though we know this is a GroupProfileControl, it's a little
    // easier on the client side if we keep it the same abstraction.
    ProfileControl controls = 4;
}

message ProfilesResponse {
    map<string, Profile> profiles = 1;
}

////////////////////////////////////////////////////////////////////////
//
// Fixtures
//

message FixtureControlState {
    bool manual = 1;
}

message Fixture {
    string name = 1;
    string profileId = 2;

    // For now we don't include the hierarchy of controls because that is
    // implied by the Profile. For control specific fields we reference
    // them directly by control ids.
    // FixtureControl rootControl = 3;

    map<string, FixtureControlState> controlState = 4;

    map<string, int32> varInts = 5;
    map<string, double> varDoubles = 6;
}

message FixtureListResponse {
    repeated Fixture fixtures = 1;
}

////////////////////////////////////////////////////////////////////////
//
// Control Points
//

// Polymorphic holder message
message ControlPoint {
    string name = 1;

    oneof val {
        ColorPoint color = 2;
        XYZPoint xyz = 3;
        EnumPoint enm = 4;
        IntensityPoint intensity = 5;
    }
}

message ColorPoint {
    map<string, double> components = 1;
}

message XYZPoint {
    double x = 1;
    double y = 2;
    double z = 3;
}

message EnumPoint {
    int32 item = 1;
    double degree = 2;
}

message IntensityPoint {
    double intensity = 1;
}

message ControlPointQuery {
    string state = 1; // Id of the state to list the control points for
}

message ControlPointList {
    repeated ControlPoint cps = 1;

    // If set, indicates these control points are for a particular state
    // This is useful when setting control points either to the current
    // state or to some other state
    string state = 2;

    // When setting control points this indicates that the control point
    // should be added if it doesn't exist in the state already
    bool upsert = 3;
}

////////////////////////////////////////////////////////////////////////
//
// FixturePatches
//

message FCPatch {
    string cp = 1;

    // Todo: Lens stack
}

message FixturePatch {
    map<string, FCPatch> byControl = 1;
}

message FixturePatchMap {
    map<string, FixturePatch> byFixture = 1;

    string state = 2;

    bool upsert = 3;
}

////////////////////////////////////////////////////////////////////////

service ElTee {
    rpc Ping(StringMsg) returns (StringMsg) {}

    rpc ProfileLibrary(Void) returns (ProfilesResponse) {}

    rpc FixtureList(Void) returns (FixtureListResponse) {}

    /* Get a list of state names and control point values in that state */
    rpc StateNames(Void) returns (StringMsg) {}
    rpc ControlPoints(StringMsg) returns (ControlPointList) {}
    rpc FixturePatches(StringMsg) returns (FixturePatchMap) {}

    /*
    Sets current values directly without modifying any other state declaration.
    */
    rpc SetControlPoints(ControlPointList) returns (Void) {}
    rpc RemoveControlPoints(ControlPointList) returns (Void) {}

    rpc ControlPointChanges(Void) returns (stream ControlPointList) {}

    /*
    Setting and removing fixture patches
    */
    rpc SetFixturePatches(FixturePatchMap) returns (Void) {}
    rpc RemoveFixturePatches(FixturePatchMap) returns (Void) {}

    /* Set a particular state */
    rpc ApplyState(StringMsg) returns (Void) {}

    /* States can be loaded and saved */
    rpc LoadableStateNames(Void) returns (StringMsg) {}
    rpc LoadLoadableState(StringMsg) returns (Void) {}
    rpc SaveLoadableState(StringMsg) returns (Void) {}
    rpc SaveAllStates(Void) returns (Void) {}

    /* Add and remove states, which could be then saved */
    rpc AddState(StringMsg) returns (Void) {}
    rpc RemoveState(StringMsg) returns (Void) {}

    /* Duplicate and apply */
    rpc CopyStateTo(SrcDest) returns (Void) {}
    rpc MoveStateTo(SrcDest) returns (Void) {}
    rpc ApplyStateTo(SrcDest) returns (Void) {}
}
